<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/drawerLayout"
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:theme="@style/AppTheme"
    tools:openDrawer="start">
    <View
        android:id="@+id/view_horizontal1"
        android:layout_width="0dp"
        android:layout_height="0.01dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/view_horizontal2"
        android:layout_width="0dp"
        android:layout_height="0.01dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBarLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_horizontal1">
        <View
            android:layout_width="0.01dp"
            android:layout_height="0dp"
            android:id="@+id/toolBar_View_Vertical1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.3"/>

        <TextView
            android:id="@+id/tvConnectPortType"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="Port"
            android:gravity="center|left"
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toolBar_View_Vertical1"/>
        <TextView
            android:id="@+id/tvConnection"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="Connection"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvConnectPortType"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvConnectionStatus"/>

        <TextView
            android:id="@+id/tvConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/un_connect"
            android:gravity="center|right"
            android:paddingRight="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:textColor="@color/red_dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ic_baseline_local_printshop_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_horizontal1"
        app:layout_constraintBottom_toTopOf="@+id/view_horizontal2"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft = "8dp"
        android:paddingRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/view_horizontal2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tvPortType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_type"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/disable_color"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvPortType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rbBluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/BLUETOOTH"/>
            <RadioButton
                android:id="@+id/rbUSB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:text="@string/USB"/>
            <RadioButton
                android:id="@+id/rbWifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"

                android:text="@string/WI_FI"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tvPrinterType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printer_type"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
            app:layout_constraintStart_toStartOf="parent"/>
        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/disable_color"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvPrinterType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rbTwoInches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/two_inches_in_mm"/>
            <RadioButton
                android:id="@+id/rbThreeInches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:text="@string/three_inches_in_mm"/>
            <RadioButton
                android:id="@+id/rbFourInches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:text="@string/four_inches_in_mm"/>

        </RadioGroup>


        <Spinner
            android:id="@+id/connectBluetoothSpinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:autofillHints="setUp"
            android:background="@drawable/button_layout_background"
            app:layout_constraintBottom_toBottomOf="@+id/btnConnect"
            app:layout_constraintEnd_toStartOf="@+id/btnConnect"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnConnect"
            app:layout_constraintVertical_bias="0.0" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/connectBluetoothSpinner"
            app:layout_constraintEnd_toEndOf="@+id/connectBluetoothSpinner"
            app:layout_constraintBottom_toBottomOf="@+id/connectBluetoothSpinner"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            android:layout_marginRight="5dp"/>
            

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connect"
            android:textAllCaps="false"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPrintTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:text="@string/print_test_page"
            app:layout_constraintTop_toBottomOf="@+id/btnConnect"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressLayout"
        android:padding="12dp"
        android:visibility="gone"
        android:background="@drawable/progress_bar_conor_frame"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:foregroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="@id/progressBar"
            app:layout_constraintEnd_toEndOf="@id/progressBar"
            android:text="@string/connect_in_progress"
            android:textColor="@color/red_dark"
            android:textStyle="bold"
            android:layout_marginTop="2dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>